--- a/TP4/indexGLTF.html
+++ b/TP4/indexGLTF.html
@@ -23,6 +23,17 @@
 <body>
     <div id="container"></div>
     <canvas class="webgl"></canvas>
+    <div id="start-overlay">
+        <div class="overlay-content">
+            <h1 class="title">Zombie Outbreak</h1>
+            <p class="subtitle">Combien de zombies veux-tu affronter ?</p>
+            <div class="form-row">
+                <label for="zombie-count">Zombies (0-20)</label>
+                <input id="zombie-count" type="number" min="0" max="20" value="3" />
+            </div>
+            <button id="start-btn" type="button">Entrer dans la Horde</button>
+        </div>
+    </div>
     <script src="./Utils.js"></script>
     <script type="module" src="./Bullet.js"></script>
     <script type="module" src="./exo6.js"></script>
